- Skip BOM when reading a JSP.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@522964 13f79535-47bb-0310-9956-ffa450edef68